<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_small"
        android:background="@color/surface">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:cardCornerRadius="@dimen/spacing_tiny"
            app:cardElevation="@dimen/spacing_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/end_horizontal_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_end="@dimen/spacing_small" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/begin_horizontal_guideline"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="@dimen/activity_horizontal_margin" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/begin_vertical_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="@dimen/activity_vertical_margin" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/end_vertical_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="@dimen/spacing_normal" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/radio_visa_type"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    app:buttonTint="@color/clear_blue"
                    android:clickable="false"
                    android:focusable="false"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/visa_date_of_entry"
                    android:textColor="@color/black"
                    android:textStyle="normal"
                    android:translationX="-6dp"
                    app:layout_constraintEnd_toEndOf="@id/end_vertical_guideline"
                    app:layout_constraintStart_toStartOf="@+id/begin_vertical_guideline"
                    app:layout_constraintTop_toTopOf="@+id/begin_horizontal_guideline"
                    tools:text="Malaysia Electronic Visa" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_validity_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:lineSpacingExtra="4sp"
                    android:text="@string/validity"
                    android:textColor="#000000"
                    android:textSize="10sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="@+id/begin_vertical_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/radio_visa_type" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_validity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_tiny"
                    android:layout_marginLeft="@dimen/spacing_tiny"
                    android:fontFamily="sans-serif-medium"
                    android:lineSpacingExtra="4sp"
                    android:text="@string/ninety_days"
                    android:textColor="#000000"
                    android:textSize="10sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toEndOf="@+id/tv_validity_header"
                    app:layout_constraintTop_toBottomOf="@+id/radio_visa_type" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_max_stay_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_small"
                    android:layout_marginLeft="@dimen/spacing_small"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/max_stay"
                    android:textColor="#000000"
                    android:textSize="10sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toEndOf="@+id/tv_validity"
                    app:layout_constraintTop_toBottomOf="@+id/radio_visa_type" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_max_stay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_small"
                    android:layout_marginLeft="@dimen/spacing_small"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="#000000"
                    android:textSize="10sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toEndOf="@+id/tv_max_stay_header"
                    app:layout_constraintTop_toBottomOf="@+id/radio_visa_type"
                    tools:text="30 Days" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_price_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:fontFamily="sans-serif-light"
                    android:lineSpacingExtra="4sp"
                    android:text="@string/price"
                    android:textColor="#000000"
                    android:textSize="10sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="@+id/begin_vertical_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/tv_validity" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_tiny"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/clear_blue"
                    android:textSize="16sp"
                    android:textStyle="normal"
                    app:layout_constraintStart_toStartOf="@+id/begin_vertical_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/tv_price_header"
                    tools:text="BDT 7,500" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/spacing_small_tiny"
                    android:fontFamily="sans-serif-light"
                    android:lineSpacingExtra="4sp"
                    android:text="@string/person"
                    android:textColor="@color/greyish_brown"
                    android:textSize="10sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="@+id/tv_price"
                    app:layout_constraintStart_toEndOf="@+id/tv_price"
                    app:layout_constraintTop_toTopOf="@+id/tv_price" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small"
                    android:layout_marginBottom="@dimen/spacing_small"
                    android:drawablePadding="@dimen/spacing_tiny"
                    android:fontFamily="sans-serif"
                    android:text="@string/seven_months_valid_passport_with_old_passport"
                    android:textColor="#f9a825"
                    android:textSize="10sp"
                    android:textStyle="normal"
                    app:drawableLeftCompat="@drawable/ic_info_mono"
                    app:layout_constraintBottom_toTopOf="@id/end_horizontal_guideline"
                    app:layout_constraintStart_toStartOf="@+id/begin_vertical_guideline"
                    app:layout_constraintTop_toBottomOf="@+id/tv_price" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>