<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="net.sharetrip.visa.booking.view.traveller.VisaTravellerNumberViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/surface"
        android:clickable="true"
        android:fillViewport="true"
        android:focusable="true"
        tools:context=".visa.booking.view.traveller.VisaTravellerNumberFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/begin_horizontal_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="@dimen/activity_vertical_margin" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_horizontal_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_end="@dimen/activity_horizontal_margin" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/begin_vertical_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/activity_horizontal_margin" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/end_vertical_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/activity_vertical_margin" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/traveler_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:lineSpacingExtra="4sp"
                android:text="@string/travellers"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="normal"
                app:layout_constraintStart_toStartOf="@+id/begin_vertical_guideline"
                app:layout_constraintTop_toTopOf="@+id/begin_horizontal_guideline" />

            <View
                android:id="@+id/traveler_divider_view"
                android:layout_width="0dp"
                android:layout_height="@dimen/line_divider_size"
                android:layout_marginTop="@dimen/spacing_small"
                android:background="@color/gray_off_dark"
                android:visibility="invisible"
                app:layout_constraintEnd_toStartOf="@+id/end_vertical_guideline"
                app:layout_constraintStart_toStartOf="@+id/begin_vertical_guideline"
                app:layout_constraintTop_toBottomOf="@+id/traveler_text_view" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/number_of_adult_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_normal"
                android:text="@{String.valueOf(viewModel.travellerNumber)}"
                android:textColor="@android:color/black"
                android:textSize="@dimen/font_medium_large"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/begin_vertical_guideline"
                app:layout_constraintTop_toBottomOf="@+id/traveler_divider_view"
                tools:text="2" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/adult_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_normal"
                android:layout_marginLeft="@dimen/spacing_normal"
                android:fontFamily="sans-serif"
                android:text="@string/traveller_s"
                android:textColor="#000000"
                android:textSize="12sp"
                android:textStyle="normal"
                app:layout_constraintBottom_toBottomOf="@id/number_of_adult_text_view"
                app:layout_constraintStart_toEndOf="@+id/number_of_adult_text_view"
                app:layout_constraintTop_toTopOf="@+id/number_of_adult_text_view" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/adult_remove_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/spacing_small"
                android:enabled="@{viewModel.travellerNumber > 1 ? true : false}"
                android:minWidth="24dp"
                android:onClick="@{() -> viewModel.onClickedAdultRemove()}"
                app:icon="@drawable/ic_remove_white_24dp"
                app:iconGravity="textStart"
                app:layout_constraintBottom_toBottomOf="@+id/adult_add_button"
                app:layout_constraintEnd_toStartOf="@+id/adult_add_button"
                app:layout_constraintTop_toTopOf="@+id/adult_add_button"
                app:strokeColor="@color/mtrl_text_btn_text_color_selector" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/adult_add_button"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:layout_marginBottom="@dimen/spacing_small"
                android:minWidth="24dp"
                android:onClick="@{() -> viewModel.onClickedAdultAdd()}"
                app:icon="@drawable/ic_add_white_24dp"
                app:iconGravity="textStart"
                app:layout_constraintEnd_toStartOf="@+id/end_vertical_guideline"
                app:layout_constraintTop_toBottomOf="@+id/traveler_divider_view"
                app:layout_constraintVertical_bias="0.0"
                app:strokeColor="@color/mtrl_text_btn_text_color_selector" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_rounded_shape_selected"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:onClick="@{()->viewModel.onDoneClicked()}"
                android:text="@string/done"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/end_horizontal_guideline"
                app:layout_constraintEnd_toStartOf="@id/end_vertical_guideline"
                app:layout_constraintStart_toStartOf="@+id/begin_vertical_guideline" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
